crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__comment_after_def_moduledefs_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "foo = 1 # comment after\n\n"
---
(BeginTopLevelDecls
    (BeginAssign
        Ident=>LowerIdent@0
        InlineAssign=>OpAssign@1
        Num=>IntBase10@2
    EndAssign)
EndTopLevelDecls)

[=== canfmt below ===]
Assign("foo", IntBase10("1"))

[=== formatted below ===]

