crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__comment_after_expr_in_parens_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "(i#abc\n)\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginParens Ident=>LowerIdent@1 EndParens)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("i")

[=== formatted below ===]

