crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__comment_after_expr_in_parens_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "i # abc\n"
---
(BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)

[=== canfmt below ===]
Ident("i")

[=== formatted below ===]

