crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__comment_after_op_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "12\n* # test!\n92\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Num=>IntBase10@0
            InlineBinOpStar=>OpStar@1
            Num=>IntBase10@2
        EndBinOpStar)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("12"), Star, IntBase10("92"))

[=== formatted below ===]

