crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__comment_before_colon_def_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "w #\n : n\nQ\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            Ident=>LowerIdent@2
        EndTypeOrTypeAlias)
        HintExpr
        UpperIdent=>UpperIdent@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("w"), Name("n"))
UpperIdent("Q")

[=== formatted below ===]

